# OpenOversight

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  BULK_UPLOAD.md  CODE_OF_CONDUCT.md  CONTRIB.md  DEPLOY.md  DOCKER_DEPLOY.md  Dockerfile  Gemfile  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  Rakefile  SECURITY.md  Vagrantfile  alembic.ini  create_db.py  db_backup.py  dev-requirements.txt  docker-compose-prod.yml  docker-compose.dev.yml  docker-compose.prod-img.yml  docker-compose.prod.yml  docker-compose.yml  fabfile.py  fresh_start.sh  justfile  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  (+3 more)
.circleci/: config.yml
.github/: CODEOWNERS  dependabot.yml  issue_template.md  pull_request_template.md
.github/workflows/: build_deploy.yml  build_docs.yml  coverage.yml  main.yml  publish.yml  pull_request.yml  test_coverage.yml  test_prs.yml
OpenOversight/: config.py  create_db.py  db_backup.py  development_data.py  downgrade_db.py  manage.py  migrate_db.py  pytest.ini  run.py  test_data.py  upgrade_db.py
OpenOversight/app/: __init__.py  cache_client.py  commands.py  config.py  create_db.py  csv_imports.py  custom.py  (+15 more)
UX-Docs/: README.md
data/: init_data.csv
data-munging/: assignments.py  common.py  demographic_data.py  divest_spd_links.py  first_employed_date.py  integrate_latest_roster.py  opa_incidents.py  spd_2020_salary_data.py  spd_2021_salary_data.py  spd_salary_data.py
database/: README.md  create_officer_faces.sql  create_officer_roster.sql  create_officer_schema.sql  populate_officer_assignments.sql  populate_officer_roster.sql  populate_officer_roster_and_assignment.sql  sample_init_data.csv
dockerfiles/: Dockerfile.prod
docs/: Makefile  advanced_csv_import.md  advanced_csv_import.rst  area_coordinator.rst  bulk_upload.md  bulk_upload.rst  conf.py  index.rst  make.bat
etl/: README.md
flickrscraper/: flickrgroup.py  readme.md  resize.and.detect.py
proposals/: 1_DesignDocument.md  2_UserStories.md
socmint/: README.md  chicago.txt  grab_socmint.py
(+401 files in other folders)
